# harmonia

./: README.md  package-lock.json  package.json  piano-analyzer.html
aruco/: debug_cam.py  key_detector.py  main.py  pyproject.toml
basic-pitch/: README.md  index.html
mvp/: context.md  index.html  package-lock.json  package.json  viva-la-vida.json
mvp/src/: App.jsx  styles.css
mvp/src/visual-feedback/: compareDyadAttempt.js  config.js  gridLayout.js  mountChordHeatmap.js  rippleModel.js
mvp/src/visual-feedback/webgl/: GridRenderer.js
src/: config.js  gridLayout.js  main.js  rippleModel.js
toypiano/: README.md  pyproject.toml  requirements.txt  templates.json
toypiano/toypiano/: __init__.py  audio.py  calibrate.py  cli.py  detect.py  onset.py  realtime.py  templates.py
toypiano/toypiano.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
visual/: .env.example  index.html  package-lock.json
visual-piano/: app.js  index.html  styles.css
visual/src/: api.js  main.js
visual/src/components/: KeyboardOverlay.js
visual/src/data/: vivaLaVidaLesson.js  vivaLaVidaSongNotes.js
visual/src/piano/: mountPracticePiano.js  piano-styles.css
visual/src/playground/: mountDesignerPlayground.js
visual/src/utils/: buildKeyboardZones.js  calculateDistanceToTarget.js
visual/src/webgl/: GridRenderer.js  shaders.js
